--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -12,4 +12,6 @@ log4j.appender.file.File=db-project2.log
 log4j.appender.file.MaxFileSize=5MB
 log4j.appender.file.MaxBackupIndex=10
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
-log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %t %c{1}:%L - %m%n
+
+#WARNING outputting method name (%M) is extremely slow and should be avoided unless execution speed is not an issue.
+log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p thread:%t %l - %m%n
