--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,8 @@
 
 *.iml
 *.log
-
 *.db
+*.html
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
